OOP - Lombok example